# TERAG111

./: .auditconfig.yaml  .cursorrules  .gitignore  .pre-commit-config.yaml  AUTOMATION_SETUP.md  CHANGELOG.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMMIT_SUMMARY.md  CREATING_SHORTCUT.md  CURSOR_SETUP_README.md  Dockerfile  FINAL_STATUS_REPORT.md  GRAFANA_GRAPH_DASHBOARD.md  NEO4J_SETUP_COMPLETE.md  PRODUCTION_READINESS_REPORT.md  PROJECT_AUDIT_REPORT.md  Procfile  README.md  REMAINING_TASKS.md  RUSSIAN_LANGUAGE_README.md  SAFE_REFACTOR_CHANGES.md  SECURITY.md  SETUP_SCRIPTS_ANALYSIS.md  SETUP_SCRIPTS_CLEANUP_REPORT.md  SYNC_REPORT.md  TASK_08_COMPLETION_SUMMARY.md  TASK_10B_SELF_ORGANIZING_SUMMARY.md  TASK_10_LEARNING_BRIDGE_SUMMARY.md  TASK_SCHEDULER_SETUP.md  TELEGRAM_SETUP.md  TERAG_IMMERSIVE_README.md  TESTING_GUIDE.md  TESTING_VOICE_MODE.md  TODO_SUMMARY.md  add_chat_id.py  add_telegram_token.py  ask_rag.py  ask_rag_v2.py  audit-simple.js  (+52 more)
.streamlit/: config.toml
app/: globals.css  page.tsx
audittools/: __init__.py  aggregate.py  architecture.py  cognitive.py  cursor_env.py  ethics.py  governance.py  observability.py
chroma_db/: index_summary.json
configs/: README.md
data/: CBDDQ_V1.3_SC09_заполнн.docx  auto_test_document.txt  ethics_rules.json  system_context.json  test_auto_update.txt  test_document.txt  test_english_document.txt  weak_signals.json  Матрица 1  Вх канал Агентство _11 06 2021.docx  СБ информация по Пров органам 2020г. Бойко С.В..xlsx  Справка по фроду для Акционеров.docx  Текст_мошенники_ с ком Бойко.docx
demo/: streamlit_app.py
docs/: ARCHITECTURE_REVIEW_PHASE5.md  AUDIT_IMPLEMENTATION_SUMMARY.md  BENCHMARK_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_AUDIT_REPORT.md  CURSOR_METHOD_PLAYBOOK.md  DAILY_REPORT_2025-01-27.md  DEPENDENCIES_UPDATE_SUMMARY.md  GEOSCAN_OPENAPI_AUDIT_REPORT.md  HISTORY.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  INDEX.md  LANGGRAPH_CORE_IMPLEMENTATION.md  MCP_AUDIT_REPORT.md  MCP_FINAL_STATUS.md  MCP_FIX_INSTRUCTIONS.md  MCP_PORT_FIX.md  MCP_USAGE_GUIDE.md  MCP_VERIFICATION_REPORT.md  MISSION_AND_GOALS.md  PHASE3_COMPLETION_REPORT.md  PHASE5_FINAL_REPORT.md  PHASE5_REMAINING_TASKS_COMPLETED.md  PHASE5_REMAINING_TASKS_TZ.md  PHASE5_REVIEW_FIX_SUMMARY.md  PHASE5_TEST_RESULTS.md  PRESENTATION_TRAC_SECTION.md  PROJECT_STRUCTURE_AUDIT.md  PROMPTOPS_IMPLEMENTATION.md  Project.md  ROADMAP_TERAG_2.1.md  SECURITY_LAYER_IMPLEMENTATION.md  SECURITY_UPDATES.md  STRUCTURE_REORGANIZATION_FINAL_REPORT.md  STRUCTURE_REORGANIZATION_PHASE2_REPORT.md  STRUCTURE_REORGANIZATION_REPORT.md  TECHNICAL_AUDIT.md  TECHNICAL_DEBT_REPORT.md  TERAG_2.1_BENCHMARK.md  TERAG_2.1_IMPLEMENTATION_GUIDE.md  (+16 more)
installer/: AUTO_MODEL_DETECTION.md  (+29 more)
(+2086 files in other folders)
